docs/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drp-doc
  labels:
    app.kubernetes.io/instance: doc
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: doc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: doc
    spec:
      containers:
      - image: docs:latest
        imagePullPolicy: Always
        name: doc
        ports:
        - containerPort: 3000

...
