docs/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drp-doc
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/instance: doc

...
